--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,13 @@
-user nginx;
-worker_processes 1; events {
-    worker-connections 1024;
+user  nginx;
+worker_processes  1;events {
+  worker_connections  1024;
 }http {
-    include /etc/nginx/mime.types;
-    server {
-        listen 80;
-        root /frontend/build;
-        index index.html; location / {
-            try_files $uri /index.html
-        }
+  include /etc/nginx/mime.types;
+  server {
+    listen 80;
+    root /frontend/build;
+    index index.html;    location / {
+      try_files $uri /index.html;
     }
+  }
 }
