--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,9 @@
-user  nginx;
-worker_processes  1;events {
-  worker_connections  1024;
-}http {
-  include /etc/nginx/mime.types;
-  server {
-    listen 80;
-    root /frontend/build;
-    index index.html;    location / {
-      try_files $uri /index.html;
-    }
+server {
+  listen 80;
+
+  location / {
+    root /usr/share/nginx/html/;
+    include /etc/nginx/mime.types;
+    try_files $uri $uri/ /index.html;
   }
 }
